[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
autobins = false

[dependencies]
alloc = {}
pc-keyboard = "0.5.0"
uart_16550 = "0.2.3"
spin = "0.5.2"
volatile = "0.2.6"
lazy_static = "1.4.0"

[dependencies.bootloader]
version = "0.11"
features = ["map_physical_memory"]

[build-dependencies]
bootimage = "0.10.3"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
